# Constraint-Aware-Architectural-Design

./: README.md  cleanup_torch.py  find_torch.py  pyproject.toml  run_example.py  run_web.py
.claude/: launch.json  settings.local.json
car/: __init__.py  cli.py  config.py  torch_mock.py
car/examples/: __init__.py  commercial_high_rise.py  mixed_use_urban.py  residential_low_rise.py
car/inference/: __init__.py  map_inference.py  mcmc_sampler.py  pipeline.py  variational.py
car/models/: __init__.py  constraints.py  design.py  network_spec.py  results.py
car/network/: __init__.py  builder.py  cpd_factory.py  edges.py  nodes.py
car/scoring/: __init__.py  compliance.py  confidence.py
car/visualization/: __init__.py  compliance_report.py  design_plot.py  network_plot.py  trace_plot.py
car/web/: __init__.py  app.py
car/web/static/: style.css
car/web/templates/: index.html  results.html
examples/: commercial.json  residential.json
tests/: conftest.py  test_inference.py  test_models.py  test_network_builder.py  test_scoring.py  test_visualization.py
