[project]
name = "car"
version = "0.1.0"
description = "Constraint-satisfying Architectural design using pRobabilistic graphical models"
requires-python = ">=3.10"

dependencies = [
    "pgmpy>=1.0.0",
    "pymc>=5.10.0",
    "arviz>=0.17.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "click>=8.1.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
car = "car.cli:cli"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
